force-app/main/default/objects/Scenario_Variable__c.object
<CustomObject>
    <description>Indicates a variable used to apply logic to scenario forecasts.</description>
    <fields>
        <fullName>Annual_Emissions_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Emissions Inventory</label>
        <referenceTo>AnnualEmssnInventory</referenceTo>
        <relationshipLabel>Scenario Variables</relationshipLabel>
        <relationshipName>Scenario_Variables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emissions_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Emissions Activity</label>
        <referenceTo>EmissionsActivity</referenceTo>
        <relationshipLabel>Scenario Variables</relationshipLabel>
        <relationshipName>Scenario_Variables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Scenario Variables</relationshipLabel>
        <relationshipName>Scenario_Variables</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scenario Variable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scenario Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>